added check to see if stylesheet is already an URL
git-svn-id: https://svn.apache.org/repos/asf/xalan/java/trunk@335075 13f79535-47bb-0310-9956-ffa450edef68